--- a/assets/main.css
+++ b/assets/main.css
@@ -69,6 +69,7 @@ h2 {
   border-radius: 10px;
   background-color: aqua;
   padding: 10px;
+  transition: all 0.4s ease;
 }
 .sait-main-wrapper {
   margin-top: 100px;
@@ -325,26 +326,48 @@ b {
   }
 }
 .img__list {
+  margin-top: 60px;
   display: flex;
-  column-gap: 400px;
+  column-gap: 60px;
+  justify-content: center;
   row-gap: 50px;
   flex-wrap: wrap;
 }
 .img__f {
   border: 1px solid black;
   border-radius: 25px;
+  transition: all 0.4s ease;
+}
+.img__f:hover {
+  transform: scale(1.1);
+  cursor: pointer;
 }
 .img__g {
   border: 1px solid black;
   border-radius: 25px;
+  transition: all 0.4s ease;
+}
+.img__g:hover {
+  transform: scale(1.1);
+  cursor: pointer;
 }
 .img__h {
   border: 1px solid black;
   border-radius: 25px;
+  transition: all 0.4s ease;
+}
+.img__h:hover {
+  transform: scale(1.1);
+  cursor: pointer;
 }
 .img__j {
   border: 1px solid black;
   border-radius: 25px;
+  transition: all 0.4s ease;
+}
+.img__j:hover {
+  transform: scale(1.1);
+  cursor: pointer;
 }
 .havola {
   :root {
@@ -503,6 +526,8 @@ b {
 }
 
 .video-wrapper {
+  margin-bottom: 90px;
+  border-radius: 30px;
   position: relative;
   width: 100%;
   height: 80vh;
@@ -901,4 +926,22 @@ svg {
   font-size: 115px;
   margin: 0;
   padding: 0;
+}
+
+.btnv {
+  button:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+    cursor: pointer;
+    box-shadow: 2px 2px 20px aqua;
+    transform: scale(1.1);
+  }
+}
+
+.team-members {
+  padding: 22px 55px;
+  background-color: #0240dd60;
+  width: fit-content;
+  margin: 0 auto;
+  border-radius: 30px;
 }
